Update and rename Diazotrophic_genotype_analyses.html to index.html
Edit the name of the file

--- a/index.html
+++ b/index.html
@@ -2807,14 +2807,7 @@ library(phyloseq); packageVersion(&quot;phyloseq&quot;)
 #install.packages(&quot;picante&quot;)
 library(picante); packageVersion(&quot;picante&quot;)
 library(tidyr)
-library(MASS)
-# A contrasting palette
-Contrasting_palette_1 &lt;- c(&quot;gray90&quot;,&quot;#666666&quot;,&quot;#33a02c&quot;,&quot;#b2df8a&quot;,&quot;#1f78b4&quot;,&quot;#a6cee3&quot;, &quot;#ff7f00&quot;,&quot;#fdbf6f&quot;,&quot;#e31a1c&quot;, &quot;#fb9a99&quot;,&quot;#6a3d9a&quot;,&quot;#cab2d6&quot;, &quot;#b15928&quot;,&quot;#ffff99&quot;,&quot;#b3de69&quot;, &quot;#fccde5&quot;, &quot;#1a9850&quot;,&quot;#bc80bd&quot;, &quot;#ccebc5&quot;,&quot;#3288bd&quot;,&quot;#F0E442&quot;)
-
-Contrasting_palette_2 &lt;- c(&quot;#666666&quot;,&quot;#33a02c&quot;,&quot;#b2df8a&quot;,&quot;#1f78b4&quot;,&quot;#a6cee3&quot;, &quot;#ff7f00&quot;,&quot;#fdbf6f&quot;,&quot;#e31a1c&quot;, &quot;#fb9a99&quot;,&quot;#6a3d9a&quot;,&quot;#cab2d6&quot;, &quot;#b15928&quot;,&quot;#ffff99&quot;,&quot;#b3de69&quot;, &quot;#fccde5&quot;, &quot;#1a9850&quot;,&quot;#bc80bd&quot;, &quot;#ccebc5&quot;,&quot;#3288bd&quot;,&quot;#F0E442&quot;)
-
-# A color-blind palette
-Bacteria_palette&lt;- c(&quot;gray90&quot;,&quot;#666666&quot;,&quot;#0B0405FF&quot;, &quot;#342346FF&quot;,&quot;#40498EFF&quot;,&quot;#357BA2FF&quot;,&quot;#38AAACFF&quot;,&quot;#78D6AEFF&quot;, &quot;#DEF5E5FF&quot;, &quot;#1A0E19FF&quot; ,&quot;#3B2F5EFF&quot;, &quot;#3A599AFF&quot;,&quot;#348AA6FF&quot;,&quot;#42B9ADFF&quot;,&quot;#A0DFB9FF&quot;, &quot;#28192FFF&quot;,&quot;#403B78FF&quot;, &quot;#366A9FFF&quot;,  &quot;#349AAAFF&quot;,   &quot;#54C9ADFF&quot;,  &quot;#C2E9CDFF&quot;)</code></pre>
+library(MASS)</code></pre>
 </div>
 <div id="data-processing" class="section level1">
 <h1>1. Data processing</h1>
