--- a/index.html
+++ b/index.html
@@ -2764,9 +2764,7 @@ $('.title').css('color', 'orange')
 </script>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p>The following analyses correspond to project <strong>“Hide-and-seek
-in the tundra: Accounting for cryptic species uncovers molecular
-variation in moss clonal populations”</strong>. The diazotrophic
+<p>The following analyses correspond to project <strong>“Decoding cryptic diversity of moss populations in a forest-tundra ecotone”</strong>. The diazotrophic
 communities of the moss <em>Racomitrium lanuginosum</em> were analyzed
 using metabarcoding of the nifH gene.</p>
 <p>The phyloseq object and most of the files used for analyses
